--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
+								<h1>Churn prediction:<br />
 								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>A partir de données d'une entreprise de télécommunication obtenues à partir du site IBM Watson, nous avons mené un travail de prédiction du désabonnement des clients.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
