--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">Clients</a></li>
+							<li><a href="generic.html">Entreprise</a></li>
+							<li><a href="generic.html">Statistiques descriptives</a></li>
+							<li><a href="elements.html">Résultats</a></li>
 						</ul>
 					</nav>
 
