--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Description des groupes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -107,6 +107,70 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+    chart = {
+  const root = pack(data);
+  
+  const svg = d3.select(DOM.svg(width, height))
+      .style("width", "100%")
+      .style("height", "auto")
+      .attr("font-size", 10)
+      .attr("font-family", "sans-serif")
+      .attr("text-anchor", "middle");
+
+  const leaf = svg.selectAll("g")
+    .data(root.leaves())
+    .enter().append("g")
+      .attr("transform", d => `translate(${d.x + 1},${d.y + 1})`);
+
+  leaf.append("circle")
+      .attr("id", d => (d.leafUid = DOM.uid("leaf")).id)
+      .attr("r", d => d.r)
+      .attr("fill-opacity", 0.7)
+      .attr("fill", d => color(d.data.group));
+
+  leaf.append("clipPath")
+      .attr("id", d => (d.clipUid = DOM.uid("clip")).id)
+    .append("use")
+      .attr("xlink:href", d => d.leafUid.href);
+
+  leaf.append("text")
+      .attr("clip-path", d => d.clipUid)
+    .selectAll("tspan")
+    .data(d => d.data.name.split(/(?=[A-Z][^A-Z])/g))
+    .enter().append("tspan")
+      .attr("x", 0)
+      .attr("y", (d, i, nodes) => `${i - nodes.length / 2 + 0.8}em`)
+      .text(d => d);
+
+  leaf.append("title")
+      .text(d => `${d.data.title}\n${format(d.value)}`);
+    
+  return svg.node();
+}
+data = d3.hierarchy(await require("@observablehq/flare"))
+  .leaves()
+  .map(d => {
+    let p = d;
+    while (p.depth > 1) p = p.parent;
+    d.data.title = d.ancestors().reverse().map(a => a.data.name).join("/");
+    d.data.group = p.data.name;
+    return d;
+  })
+  .map(d => d.data)
+  .sort((a, b) => a.group.localeCompare(b.group))
+  .map(({name, title, group, size}) => ({name, title, group, value: size}))
+pack = data => d3.pack()
+    .size([width - 2, height - 2])
+    .padding(3)
+  (d3.hierarchy({children: data})
+    .sum(d => d.value))
+width = 932
+height = width
+format = d3.format(",d")
+color = d3.scaleOrdinal().range(d3.schemeCategory10)
+d3 = require("d3@5")
+		</script>
 
 	</body>
 </html>
