--- a/elements.html
+++ b/elements.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Essai...
 -->
 <html>
 	<head>
-		<title>Elements - Phantom by HTML5 UP</title>
+		<title>Elements - PC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,11 +37,11 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index.html">Accueil</a></li>
+							<li><a href="generic.html">Données</a></li>
+							<li><a href="generic.html">Statistiques descriptives</a></li>
+							<li><a href="generic.html">Modèles</a></li>
+							<li><a href="elements.html">Résultats</a></li>
 						</ul>
 					</nav>
 
@@ -59,14 +57,14 @@
 									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
 									<hr />
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<p>Chut</p>
 									<hr />
 									<h2>Heading Level 2</h2>
 									<h3>Heading Level 3</h3>
 									<h4>Heading Level 4</h4>
 									<hr />
 									<h3>Blockquote</h3>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<blockquote>On se tait</blockquote>
 									<h3>Preformatted</h3>
 									<pre><code>i = 0;
 
@@ -86,26 +84,26 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="col-6 col-12-medium">
 											<h3>Unordered</h3>
 											<ul>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Sagittis adipiscing.</li>
-												<li>Felis enim feugiat.</li>
+												<li>Non.</li>
+												<li>Oui.</li>
+												<li>Et non.</li>
 											</ul>
 											<h3>Alternate</h3>
 											<ul class="alt">
-												<li>Dolor pulvinar etiam.</li>
-												<li>Sagittis adipiscing.</li>
-												<li>Felis enim feugiat.</li>
+												<li>ABC</li>
+												<li>DEF</li>
+												<li>HIJ</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-medium">
 											<h3>Ordered</h3>
 											<ol>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis viverra.</li>
-												<li>Felis enim feugiat.</li>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis lorem.</li>
-												<li>Felis enim et feugiat.</li>
+												<li>jjkkkolm.</li>
+												<li>et ui.</li>
+												<li>et nn.</li>
+												<li>et ui.</li>
+												<li>oh nn</li>
+												<li>caro</li>
 											</ol>
 											<h3>Icons</h3>
 											<ul class="icons">
@@ -186,7 +184,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												</tr>
 												<tr>
 													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
+													<tdpoumpoumpoum</td>
 													<td>19.99</td>
 												</tr>
 												<tr>
