--- a/generic.html
+++ b/generic.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://github.com/s-p-l/essai/blob/master/d3.js"></script>
+		<script src="https://github.com/s-p-l/essai/blob/master/d3.js" type="text/javascript"></script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
