--- a/generic.html
+++ b/generic.html
@@ -52,5 +52,40 @@
 						<div class="inner">
 							<h1>Generic Page</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<canvas id="chart1"></canvas>
+							<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
+							<script>
+								var ctx = document.getElementById('chart');
+
+var myChart = new Chart(ctx, {
+  type: 'bar',
+  data: {
+    labels: ['Risk Level'],
+    datasets: [
+      {
+        label: 'Low',
+        data: [67.8],
+        backgroundColor: '#D6E9C6',
+      },
+      {
+        label: 'Moderate',
+        data: [20.7],
+        backgroundColor: '#FAEBCC',
+      },
+      {
+        label: 'High',
+        data: [11.4],
+        backgroundColor: '#EBCCD1',
+      }
+    ]
+  },
+  options: {
+    scales: {
+      xAxes: [{ stacked: true }],
+      yAxes: [{ stacked: true }]
+    }
+  }
+});
+							</script>
 	</body>
 </html>
