--- a/generic.html
+++ b/generic.html
@@ -53,7 +53,7 @@
 							<h1>Generic Page</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<canvas id="chart1"></canvas>
-							<script src="https://github.com/s-p-l/essai/blob/master/d3.min.js"></script>
+							<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 							<script>
 								var ctx = document.getElementById('chart');
 
