--- a/generic.html
+++ b/generic.html
@@ -55,7 +55,7 @@
 							<canvas id="chart1"></canvas>
 							<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 							<script>
-								var ctx = document.getElementById('chart');
+								var ctx = document.getElementById('chart1');
 
 var myChart = new Chart(ctx, {
   type: 'bar',
