--- a/generic.html
+++ b/generic.html
@@ -53,8 +53,8 @@
 							<h1>Generic Page</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<canvas id="chart1"></canvas>
-							<script src=https://github.com/s-p-l/essai/blob/master/d3.js"></script>
-							<script>
+							<script type="text/javascript"src=https://github.com/s-p-l/essai/blob/master/d3.js"></script>
+							<script type="text/javascript">
 								var ctx = document.getElementById('chart1');
 
 var myChart = new Chart(ctx, {
