--- a/generic.html
+++ b/generic.html
@@ -54,12 +54,10 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<canvas id="chart1"></canvas>
 							<script type="text/javascript" src=https://github.com/s-p-l/essai/blob/master/d3.js"></script>
-							<script type="text/javascript">
-								var ctx = document.getElementById('chart1');
-								var myChart = new Chart(ctx, {
-  type: 'bar',
-  data: {
-    labels: ['Risk Level'],
+							<script>
+							var ctx = document.getElementById('chart1');
+							var myChart = new Chart(ctx, {type: 'bar', data: {
+																	    labels: ['Risk Level'],
     datasets: [
       {
         label: 'Low',
