--- a/generic.html
+++ b/generic.html
@@ -56,33 +56,27 @@
 							<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 							<script>
 							var ctx = document.getElementById('chart1');
-							var myChart = new Chart(ctx, {type: 'bar', data: {
-labels: ['Risk Level'],
-    datasets: [
-      {
-        label: 'Low',
-        data: [67.8],
-        backgroundColor: '#D6E9C6',
-      },
-      {
-        label: 'Moderate',
-        data: [20.7],
-        backgroundColor: '#FAEBCC',
-      },
-      {
-        label: 'High',
-        data: [11.4],
-        backgroundColor: '#EBCCD1',
-      }
-    ]
-  },
-  options: {
-    scales: {
-      xAxes: [{ stacked: true }],
-      yAxes: [{ stacked: true }]
-    }
-  }
-});
-</script>
+							var myChart = new Chart(ctx, {type: 'bar', 
+										      data: {
+											      labels: ['Risk Level'],
+											      datasets: [
+												      {label: 'Low',
+												       data: [67.8],
+												       backgroundColor: '#D6E9C6',},
+												      {label: 'Moderate',
+												       data: [20.7],
+												       backgroundColor: '#FAEBCC',},
+												      {label: 'High',
+												       data: [11.4],
+												       backgroundColor: '#EBCCD1',}
+											      ]},
+										      options: {
+											      scales: {
+												      xAxes: [{ stacked: true }],
+												      yAxes: [{ stacked: true }]
+											      }
+										      }
+										     });
+							</script>
 	</body>
 </html>
