--- a/generic.html
+++ b/generic.html
@@ -11,6 +11,72 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<script>
+			window.onload = function () {
+
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	theme: "light2", //"light1", "dark1", "dark2"
+	title:{
+		text: "Division of Products Sold in 2nd Quarter"             
+	},
+	axisY:{
+		interval: 10,
+		suffix: "%"
+	},
+	toolTip:{
+		shared: true
+	},
+	data:[{
+		type: "stackedBar100",
+		toolTipContent: "{label}<br><b>{name}:</b> {y} (#percent%)",
+		showInLegend: true, 
+		name: "April",
+		dataPoints: [
+			{ y: 600, label: "Water Filter" },
+			{ y: 400, label: "Modern Chair" },
+			{ y: 120, label: "VOIP Phone" },
+			{ y: 250, label: "Microwave" },
+			{ y: 120, label: "Water Filter" },
+			{ y: 374, label: "Expresso Machine" },
+			{ y: 350, label: "Lobby Chair" }
+		]
+		},
+		{
+			type: "stackedBar100",
+			toolTipContent: "<b>{name}:</b> {y} (#percent%)",
+			showInLegend: true, 
+			name: "May",
+			dataPoints: [
+				{ y: 400, label: "Water Filter" },
+				{ y: 500, label: "Modern Chair" },
+				{ y: 220, label: "VOIP Phone" },
+				{ y: 350, label: "Microwave" },
+				{ y: 220, label: "Water Filter" },
+				{ y: 474, label: "Expresso Machine" },
+				{ y: 450, label: "Lobby Chair" }
+			]
+		}, 
+		{
+			type: "stackedBar100",
+			toolTipContent: "<b>{name}:</b> {y} (#percent%)",
+			showInLegend: true, 
+			name: "June",
+			dataPoints: [
+				{ y: 300, label: "Water Filter" },
+				{ y: 610, label: "Modern Chair" },
+				{ y: 215, label: "VOIP Phone" },
+				{ y: 221, label: "Microwave" },
+				{ y: 75, label: "Water Filter" },
+				{ y: 310, label: "Expresso Machine" },
+				{ y: 340, label: "Lobby Chair" }
+			]
+	}]
+});
+chart.render();
+
+}
+</script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -52,32 +118,8 @@
 						<div class="inner">
 							<h1>Generic Page</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<canvas id="chart1"></canvas>
-							<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
-							<script>
-							var ctx = document.getElementById('chart1');
-							var myChart = new Chart(ctx, {type: 'bar', 
-										      data: {
-											      labels: ['Risk Level'],
-											      datasets: [
-												      {label: 'Low',
-												       data: [67.8],
-												       backgroundColor: '#D6E9C6',},
-												      {label: 'Moderate',
-												       data: [20.7],
-												       backgroundColor: '#FAEBCC',},
-												      {label: 'High',
-												       data: [11.4],
-												       backgroundColor: '#EBCCD1',}
-											      ]},
-										      options: {
-											      scales: {
-												      xAxes: [{ stacked: true }],
-												      yAxes: [{ stacked: true }]
-											      }
-										      }
-										     });
-							</script>
+							<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<p> Analytics: churn prediction </p>
 	</body>
 </html>
