--- a/generic.html
+++ b/generic.html
@@ -14,7 +14,7 @@
 		<script>
 			window.onload = function () {
 
-var chart = new CanvasJS.Chart("chartContainer", {
+var chart = new CanvasJS.Chart("chart_gender", {
 	animationEnabled: true,
 	theme: "light2", //"light1", "dark1", "dark2"
 	title:{
@@ -93,7 +93,7 @@ chart.render();
 						<div class="inner">
 							<h1>Generic Page</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+							<div id="chart_gender" style="height: 300px; width: 100%;"></div>
 							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<p> Analytics: churn prediction </p>
 	</body>
