--- a/generic.html
+++ b/generic.html
@@ -57,7 +57,7 @@ chart.render();
 
 var chart = new CanvasJS.Chart("chart_senior", {
 	animationEnabled: true,
-	theme: "light1", //"light2", "dark1", "dark2"
+	theme: "light2", //"light1", "dark1", "dark2"
 	title:{
 		text: "Churn by age category"             
 	},
@@ -135,6 +135,7 @@ chart.render();
 							<h1>Generic Page</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<div id="chart_gender" style="height: 300px; width: 100%;"></div>
+							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<div id="chart_senior" style="height: 300px; width: 100%;"></div>
 							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<p> Analytics: churn prediction </p>
