--- a/generic.html
+++ b/generic.html
@@ -132,8 +132,7 @@ chart.render();
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<h1>Descriptive statistics</h1>
 							<div id="chart_gender" style="height: 300px; width: 100%;"></div>
 							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<p> Analytics: churn prediction </p>
