--- a/generic.html
+++ b/generic.html
@@ -93,6 +93,39 @@ chart.render();
 
 }
 </script>
+		<script>
+window.onload = function () {
+
+var chart = new CanvasJS.Chart("chart_tenure", {
+	animationEnabled: true,
+	title:{
+		text: "Daily Sleep Statistics of Age Group 12 - 20"
+	},
+	axisX: {
+		valueFormatString: "DDD"
+	},
+	axisY: {
+		title: "Sleep Time (in Hours)"
+	},
+	data: [{
+		type: "boxAndWhisker",
+		xValueFormatString: "DDDD",
+		yValueFormatString: "#0.0 Hours",
+		dataPoints: [
+			{ x: new Date(2017, 6, 3),  y: [4, 6, 8, 9, 7] },
+			{ x: new Date(2017, 6, 4),  y: [5, 6, 7, 8, 6.5] },
+			{ x: new Date(2017, 6, 5),  y: [4, 5, 7, 8, 6.5] },
+			{ x: new Date(2017, 6, 6),  y: [3, 5, 6, 9, 5.5] },
+			{ x: new Date(2017, 6, 7),  y: [6, 8, 10, 11, 8.5] },
+			{ x: new Date(2017, 6, 8),  y: [5, 7, 9, 12, 7.5] },
+			{ x: new Date(2017, 6, 9),  y: [4, 6, 8, 9, 7] }
+		]
+	}]
+});
+chart.render();
+
+}
+</script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -137,6 +170,8 @@ chart.render();
 							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<p> Analytics: churn prediction </p>
 							<div id="chart_senior" style="height: 300px; width: 100%;"></div>
+							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+							<div id="chart_tenure" style="height: 300px; width: 100%;"></div>
 							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 	</body>
 </html>
