--- a/generic.html
+++ b/generic.html
@@ -131,9 +131,14 @@ chart.render();
 					<div id="main">
 						<div class="inner">
 							<h1>Descriptive statistics</h1>
-							<div id="chart_gender" style="height: 300px; width: 100%;"></div>
+							<div class="w3-content w3-display-container">
+								<div id="chart_gender" style="height: 300px; width: 100%;"></div>
+								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+								<div id="chart_senior" style="height: 300px; width: 100%;"></div>
+								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							<p> Analytics: churn prediction </p>
-							<div id="chart_senior" style="height: 300px; width: 100%;"></div>
-							<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+						</div>
+							
+							
 	</body>
 </html>
