--- a/generic.html
+++ b/generic.html
@@ -131,7 +131,7 @@ chart.render();
 					<div id="main">
 						<div class="inner">
 							<h1>Descriptive statistics</h1>
-							<div class="w3-content w3-display-container">
+							<div class="styley">
 								<div id="chart_gender" style="height: 300px; width: 100%;"></div>
 								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 								<div id="chart_senior" style="height: 300px; width: 100%;"></div>
