--- a/generic.html
+++ b/generic.html
@@ -86,6 +86,53 @@ var chart = new CanvasJS.Chart("chart_senior", {
 });
 chart.render();
 
+var chart = new CanvasJS.Chart("chart_Internet", {
+	animationEnabled: true,
+	theme: "light2", //"light1", "dark1", "dark2"
+	title:{
+		text: "Churn by Internet service"             
+	},
+	axisY:{
+		interval: 10,
+		suffix: "%"
+	},
+	toolTip:{
+		shared: true
+	},
+	data:[{
+			type: "stackedBar100",
+			toolTipContent: "<b>{name}:</b> {y} (#percent%)",
+			showInLegend: true, 
+			name: "DSL",
+			dataPoints: [
+				{ y: 440, label: "Churn" },
+				{ y: 1650, label: "No churn" }
+			]
+		}, 
+		{
+			type: "stackedBar100",
+			toolTipContent: "<b>{name}:</b> {y} (#percent%)",
+			showInLegend: true, 
+			name: "Optic Fiber",
+			dataPoints: [
+				{ y: 589, label: "Churn" },
+				{ y: 1700, label: "No churn" }
+			]
+		},
+		{
+			type: "stackedBar100",
+			toolTipContent: "<b>{name}:</b> {y} (#percent%)",
+			showInLegend: true, 
+			name: "No Internet service",
+			dataPoints: [
+				{ y: 5490, label: "Churn" },
+				{ y: 1710, label: "No churn" }
+			]
+			
+	}]
+});
+chart.render();
+
 }
 </script>
 	</head>
