--- a/generic.html
+++ b/generic.html
@@ -132,6 +132,35 @@ var chart = new CanvasJS.Chart("chart_Internet", {
 	}]
 });
 chart.render();
+				
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	title:{
+		text: "Churn and tenure"
+	},
+	axisX: {
+		valueFormatString: "DDD"
+	},
+	axisY: {
+		title: "Sleep Time (in Hours)"
+	},
+	data: [{
+		type: "boxAndWhisker",
+		xValueFormatString: "DDDD",
+		yValueFormatString: "#0.0 Hours",
+		dataPoints: [
+			{ x: new Date(2017, 6, 3),  y: [4, 6, 8, 9, 7] },
+			{ x: new Date(2017, 6, 4),  y: [5, 6, 7, 8, 6.5] },
+			{ x: new Date(2017, 6, 5),  y: [4, 5, 7, 8, 6.5] },
+			{ x: new Date(2017, 6, 6),  y: [3, 5, 6, 9, 5.5] },
+			{ x: new Date(2017, 6, 7),  y: [6, 8, 10, 11, 8.5] },
+			{ x: new Date(2017, 6, 8),  y: [5, 7, 9, 12, 7.5] },
+			{ x: new Date(2017, 6, 9),  y: [4, 6, 8, 9, 7] }
+		]
+	}]
+});
+chart.render();
+
 
 }
 </script>
