--- a/generic.html
+++ b/generic.html
@@ -133,7 +133,7 @@ var chart = new CanvasJS.Chart("chart_Internet", {
 });
 chart.render();
 				
-var chart = new CanvasJS.Chart("chartContainer", {
+var chart = new CanvasJS.Chart("chart_tenure", {
 	animationEnabled: true,
 	title:{
 		text: "Churn and tenure"
@@ -208,6 +208,10 @@ chart.render();
 								<div id="chart_gender" style="height: 300px; width: 100%;"></div>
 								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 								<div id="chart_senior" style="height: 300px; width: 100%;"></div>
+								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+								<div id="chart_Internet" style="height: 300px; width: 100%;"></div>
+								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+								<div id="chart_tenure" style="height: 300px; width: 100%;"></div>
 								<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 							</div>
 							<p> Analytics: churn prediction </p>
