--- a/generic.html
+++ b/generic.html
@@ -142,7 +142,7 @@ var chart = new CanvasJS.Chart("chart_tenure", {
 		valueFormatString: "DDD"
 	},
 	axisY: {
-		title: "Sleep Time (in Hours)"
+		title: "Months"
 	},
 	data: [{
 		type: "boxAndWhisker",
@@ -150,12 +150,7 @@ var chart = new CanvasJS.Chart("chart_tenure", {
 		yValueFormatString: "#0.0 Hours",
 		dataPoints: [
 			{ x: new Date(2017, 6, 3),  y: [4, 6, 8, 9, 7] },
-			{ x: new Date(2017, 6, 4),  y: [5, 6, 7, 8, 6.5] },
-			{ x: new Date(2017, 6, 5),  y: [4, 5, 7, 8, 6.5] },
-			{ x: new Date(2017, 6, 6),  y: [3, 5, 6, 9, 5.5] },
-			{ x: new Date(2017, 6, 7),  y: [6, 8, 10, 11, 8.5] },
-			{ x: new Date(2017, 6, 8),  y: [5, 7, 9, 12, 7.5] },
-			{ x: new Date(2017, 6, 9),  y: [4, 6, 8, 9, 7] }
+			{ x: new Date(2017, 6, 4),  y: [5, 6, 7, 8, 6.5] }
 		]
 	}]
 });
